--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<p>Hello @CustomToUpper(name)</p>
+<p>Hello @StringUtilities.CustomToUpper(name)</p>
 <p>Let's play 2 + 2 = @(2 + 2)</p>
 
 <button @onclick="WriteInLog">Click me</button>
@@ -8,7 +8,10 @@
 @code {
     string name = "Julia";
 
-    string CustomToUpper(string value) => value.ToUpper();
+    public class StringUtilities
+    {
+        public static string CustomToUpper(string value) => value.ToUpper();
+    }
 
     void WriteInLog()
     {
