--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -6,3 +6,4 @@
 @using BlazorMovies.Client
 @using BlazorMovies.Client.Shared
 @using BlazorMovies.Client.Helpers
+@using BlazorMovies.Shared.Entities
