--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -7,12 +7,27 @@
 
 <div>
     <h3>Movie</h3>
-    <p>Title: <b>@spiderman.Title</b></p>
-    <p>Release Date: <b>@spiderman.ReleaseDate.ToString("dd MMM yyyy")</b></p>
+    @foreach (var movie in movies)
+    {
+    <p>Title: <b>@movie.Title</b></p>
+    <p>Release Date: <b>@movie.ReleaseDate.ToString("dd MMM yyyy")</b></p>        
+    }
 </div>
 
 @code {
     string name = "Julia";
+
+    List<Movie> movies;
+
+    protected override void OnInitialized()
+    {
+        movies = new List<Movie>
+        {
+            new Movie { Title = "Spider-Man: Far From Home", ReleaseDate = new DateTime(2019, 7, 2) },
+            new Movie { Title = "Moana", ReleaseDate = new DateTime(2016, 11, 23) },
+            new Movie { Title = "Inception", ReleaseDate = new DateTime(2010, 7, 16) }
+        };
+    }
 
     Movie spiderman = new Movie
     {
