--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,16 +1,15 @@
 ﻿@page "/"
 
-<p>Hello @StringUtilities.CustomToUpper(name)</p>
-<p>Let's play 2 + 2 = @(2 + 2)</p>
-
-<button @onclick="WriteInLog">Click me</button>
-
 <div>
     <h3>Movie</h3>
 
     @if(movies == null)
     {
         <text>Loadin…</text>
+    }
+    else if (movies.Count == 0)
+    {
+        <text>There are no records to show</text>
     }
     else
     {
@@ -24,8 +23,6 @@
 </div>
 
 @code {
-    string name = "Julia";
-
     List<Movie> movies;
 
     protected async override Task OnInitializedAsync()
