--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -2,49 +2,8 @@
 
 <div>
     <h3>Movie</h3>
-
-    @if(movies == null)
-    {
-        <text>Loadin…</text>
-    }
-    else if (movies.Count == 0)
-    {
-        <text>There are no records to show</text>
-    }
-    else
-    {
-        @foreach (var movie in movies)
-        {
-            <p>Title: @((MarkupString)movie.Title)</p>
-            <p>Release Date: <b>@movie.ReleaseDate.ToString("dd MMM yyyy")</b></p>        
-        }        
-    }
-
+    <MoviesList />
 </div>
 
 @code {
-    List<Movie> movies;
-
-    protected async override Task OnInitializedAsync()
-    {
-        await Task.Delay(3000);
-
-        movies = new List<Movie>
-        {
-            new Movie { Title = "<b>Spider-Man: Far From Home</b>", ReleaseDate = new DateTime(2019, 7, 2) },
-            new Movie { Title = "<i>Moana</i>", ReleaseDate = new DateTime(2016, 11, 23) },
-            new Movie { Title = "Inception", ReleaseDate = new DateTime(2010, 7, 16) }
-        };
-    }
-
-    Movie spiderman = new Movie
-    {
-        Title = "Spider-Man: Far From Home",
-        ReleaseDate = new DateTime(2019, 7, 2)
-    };
-
-    void WriteInLog()
-    {
-        Console.WriteLine("I've been clicked!");
-    }
 }
