--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -2,8 +2,19 @@
 
 <div>
     <h3>Movie</h3>
-    <MoviesList />
+    <MoviesList Movies="movies" />
 </div>
 
 @code {
+    List<Movie> movies;
+
+    protected override void OnInitialized()
+    {
+        movies = new List<Movie>
+        {
+            new Movie { Title = "Spider-Man: Far From Home", ReleaseDate = new DateTime(2019, 7, 2) },
+            new Movie { Title = "Moana", ReleaseDate = new DateTime(2016, 11, 23) },
+            new Movie { Title = "Inception", ReleaseDate = new DateTime(2010, 7, 16) }
+        };
+    }
 }
