extract a component for an individual movie

--- a/Client/Shared/MoviesList.razor
+++ b/Client/Shared/MoviesList.razor
@@ -10,8 +10,7 @@ else
 {
     @foreach (var movie in Movies)
     {
-        <p>Title: @(movie.Title)</p>
-        <p>Release Date: <b>@movie.ReleaseDate.ToString("dd MMM yyyy")</b></p>        
+        <IndividualMovie Movie="movie" />
     }        
 }
 
