--- a/Client/Shared/IndividualMovie.razor
+++ b/Client/Shared/IndividualMovie.razor
@@ -1,8 +1,16 @@
 <div>
         <p>Title: @(Movie.Title)</p>
-        <p>Release Date: <b>@Movie.ReleaseDate.ToString("dd MMM yyyy")</b></p>        
+        <p>Release Date: <b>@Movie.ReleaseDate.ToString("dd MMM yyyy")</b></p>
+        <div>
+            <button @onclick="Delete">Delete</button>
+        </div>
 </div>
 
 @code {
     [Parameter] public Movie Movie { get; set; }
+
+    void Delete()
+    {
+        Console.WriteLine($"Deleting {Movie.Title}");
+    }
 }
