--- a/Client/Shared/IndividualMovie.razor
+++ b/Client/Shared/IndividualMovie.razor
@@ -1,13 +1,18 @@
 <div>
         <p>Title: @(Movie.Title)</p>
         <p>Release Date: <b>@Movie.ReleaseDate.ToString("dd MMM yyyy")</b></p>
-        <div>
-            <button @onclick="Delete">Delete</button>
-        </div>
+
+        if (DispalyButtons)
+        {
+            <div>
+                <button @onclick="Delete">Delete</button>
+            </div>
+        }
 </div>
 
 @code {
     [Parameter] public Movie Movie { get; set; }
+    [Parameter] public bool DisplayButtons { get; set; } = false;
 
     void Delete()
     {
