use a movie deleting callback from the component

--- a/Client/Shared/MoviesList.razor
+++ b/Client/Shared/MoviesList.razor
@@ -12,7 +12,7 @@ else
 
     @foreach (var movie in Movies)
     {
-        <IndividualMovie Movie="movie" DisplayButtons="displayButtons" />
+        <IndividualMovie Movie="movie" DisplayButtons="displayButtons" DeleteMovie="DeleteMovie" />
     }        
 }
 
@@ -20,4 +20,9 @@ else
     [Parameter] public List<Movie> Movies { get; set; }
 
     bool displayButtons = false;
+
+    private void DeleteMovie(Movie movie)
+    {
+        Movies.Remove(movie);
+    }
 }
