use ChildContent projection for a loading list

--- a/Client/Shared/IndividualMovie.razor
+++ b/Client/Shared/IndividualMovie.razor
@@ -5,7 +5,7 @@
         @if (DisplayButtons)
         {
             <div>
-                <button @onclick="() => DeleteMovie.InvokeAsync(Movie)">Delete</button>
+                <button @onclick="@(() => DeleteMovie.InvokeAsync(Movie))">Delete</button>
             </div>
         }
 </div>
