--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -2,7 +2,9 @@
 
 <div>
     <h3>Movie</h3>
-    <MoviesList Movies="movies" />
+    <MoviesList Movies="movies">
+        <span style="color:red">This is loading…</span>
+    </MoviesList>
 </div>
 
 @code {
@@ -10,11 +12,11 @@
 
     protected override void OnInitialized()
     {
-        movies = new List<Movie>
+        /*movies = new List<Movie>
         {
             new Movie { Title = "Spider-Man: Far From Home", ReleaseDate = new DateTime(2019, 7, 2) },
             new Movie { Title = "Moana", ReleaseDate = new DateTime(2016, 11, 23) },
             new Movie { Title = "Inception", ReleaseDate = new DateTime(2010, 7, 16) }
-        };
+        };*/
     }
 }
