--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -3,12 +3,17 @@
 <div>
     <h3>Movie</h3>
     <MoviesList Movies="movies">
-        <span style="color:red">This is loading…</span>
+        <LoadingTemplate>
+            <span style="color:red">This is loading…</span>
+        </LoadingTemplate>
+        <EmptyTemplate>
+            <span style="color:blue">No records to see.</span>
+        </EmptyTemplate>
     </MoviesList>
 </div>
 
 @code {
-    List<Movie> movies;
+    List<Movie> movies = new List<Movie>();
 
     protected override void OnInitialized()
     {
