--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -2,26 +2,20 @@
 
 <div>
     <h3>Movie</h3>
-    <MoviesList Movies="movies">
-        <LoadingTemplate>
-            <span style="color:red">This is loading…</span>
-        </LoadingTemplate>
-        <EmptyTemplate>
-            <span style="color:blue">No records to see.</span>
-        </EmptyTemplate>
-    </MoviesList>
+    <MoviesList Movies="movies" />
 </div>
 
 @code {
-    List<Movie> movies = new List<Movie>();
+    List<Movie> movies;
 
-    protected override void OnInitialized()
+    protected async override Task OnInitializedAsync()
     {
-        /*movies = new List<Movie>
+        await Task.Delay(2000);
+        movies = new List<Movie>
         {
             new Movie { Title = "Spider-Man: Far From Home", ReleaseDate = new DateTime(2019, 7, 2) },
             new Movie { Title = "Moana", ReleaseDate = new DateTime(2016, 11, 23) },
             new Movie { Title = "Inception", ReleaseDate = new DateTime(2010, 7, 16) }
-        };*/
+        };
     }
 }
