change the list dynamically with the Add movie button

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -5,6 +5,8 @@
     <MoviesList Movies="movies" />
 </div>
 
+<button @onclick="AddNewMovie">Add new movie</button>
+
 @code {
     List<Movie> movies;
 
@@ -17,5 +19,10 @@
             new Movie { Title = "Moana", ReleaseDate = new DateTime(2016, 11, 23) },
             new Movie { Title = "Inception", ReleaseDate = new DateTime(2010, 7, 16) }
         };
+    }
+
+    private void AddNewMovie()
+    {
+        movies.Add(new Movie { Title = "Movie Sample", ReleaseDate = DateTime.Today });
     }
 }
