inject a repository interface

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@inject IRepository repository
 
 <div>
     <h3>Movie</h3>
@@ -13,12 +14,7 @@
     protected async override Task OnInitializedAsync()
     {
         await Task.Delay(2000);
-        movies = new List<Movie>
-        {
-            new Movie { Title = "Spider-Man: Far From Home", ReleaseDate = new DateTime(2019, 7, 2) },
-            new Movie { Title = "Moana", ReleaseDate = new DateTime(2016, 11, 23) },
-            new Movie { Title = "Inception", ReleaseDate = new DateTime(2010, 7, 16) }
-        };
+        movies = repository.GetMovies();
     }
 
     private void AddNewMovie()
