--- a/Client/Pages/Counter.razor
+++ b/Client/Pages/Counter.razor
@@ -1,22 +1,12 @@
 ﻿@page "/counter"
-@inject SingletonService singleton
-@inject TransientService transient
 
 <h1>Counter</h1>
 
 <p>Current count: @currentCount</p>
-<p>Singleton count: @singleton.Value</p>
-<p>Transient count: @transient.Value</p>
+<p>Singleton count: @Singleton.Value</p>
+<p>Transient count: @Transient.Value</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
-@code {
-    private int currentCount = 0;
+<input type="number" @bind="currentCount" />
 
-    private void IncrementCount()
-    {
-        currentCount++;
-        singleton.Value = currentCount;
-        transient.Value = currentCount;
-    }
-}
