--- a/Client/Shared/MoviesList.razor
+++ b/Client/Shared/MoviesList.razor
@@ -1,3 +1,5 @@
+@inject IJSRuntime js
+
 <input type="checkbox" @bind="displayButtons" />
 
 <GenericList List="Movies">
@@ -11,8 +13,11 @@
 
     bool displayButtons = false;
 
-    private void DeleteMovie(Movie movie)
+    private async Task DeleteMovie(Movie movie)
     {
+        var confirmed = await js.InvokeAsync<bool>("confirm", $"Are you sure you want to delete {movie.Title}?");
+        if (!confirmed) return;
+        
         Movies.Remove(movie);
     }
 }
