--- a/Client/Shared/MoviesList.razor
+++ b/Client/Shared/MoviesList.razor
@@ -15,9 +15,9 @@
 
     private async Task DeleteMovie(Movie movie)
     {
-        var confirmed = await js.InvokeAsync<bool>("confirm", $"Are you sure you want to delete {movie.Title}?");
+        var confirmed = await js.Confirm($"Are you sure you want to delete {movie.Title}?");
         if (!confirmed) return;
-        
+
         Movies.Remove(movie);
     }
 }
