--- a/Client/Pages/Counter.razor
+++ b/Client/Pages/Counter.razor
@@ -8,5 +8,7 @@
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
+<button class="btn btn-primary" @onclick="IncrementCountJavaScript">Click me (JavaScrpt)</button>
+
 <input type="number" @bind="currentCount" />
 
